Compilefix for Java 11